views: use correct color for enabled checkbox/radio images

The existing code used FocusedBorderColor, which happened to be equal to
ProminentButtonColor on non-Mac and close enough on Mac that nobody noticed the
disparity. Mojave changed the color that underlies FocusedBorderColor, which
made checkboxes start drawing very faintly.

Bug: 918673
Change-Id: If73a4607bb5857e4b61d67cfd7e9f58ebd341021
Reviewed-on: https://chromium-review.googlesource.com/c/1394434
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#619724}(cherry picked from commit a6595d0d181291b8f978c87de8cf0a2363657f3b [formerly 91445be6d6e4e36f5358282cdd030fe7e35727b8])
Reviewed-on: https://chromium-review.googlesource.com/c/1395884
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#564}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: bb3cc750cd4157bcee31bc8f76fcaff6b70dd535